# ytoolsbox-gin-custom/docs/swagger.yaml
@@ -268,7 +268,7 @@ paths:
       - 模拟脆弱性相关的接口
   /custom/mock/vulnerability/WeakPasswd:
     post:
-      description: 模拟登录弱密码
+      description: 模拟登录弱密码 或 模拟存在空密码/空密钥问题 或 模拟登录弱密码 或 模拟存在空密码/空密钥问题 或 模拟万能密码注入
       parameters:
       - description: query中填写明文的密码信息,例如password=123456
         in: query
@@ -287,7 +287,7 @@ paths:
           description: 返回成功
           schema:
             $ref: '#/definitions/dto.SuccessResponseMeta'
-      summary: 模拟登录弱密码
+      summary: 模拟登录弱密码 或 模拟存在空密码/空密钥问题 
       tags:
       - 模拟脆弱性相关的接口
   /custom/mock/vulnerability/ws/v1/cluster/apps/new-application:
@@ -342,4 +342,563 @@ paths:
       summary: 模拟JDBC连接字符串信息泄露
       tags:
       - 模拟脆弱性相关的接口
+  /:
+    get:
+      description: 模拟凭证长期生效
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回成功
+          schema:
+            $ref: '#/definitions/dto.SuccessResponseMeta'
+      summary: 模拟凭证长期生效
+      tags:
+      - 模拟脆弱性相关的接口
+  /baizhi/_search/:
+    get:
+      description: 模拟ElasticSearch查询数据接口未授权访问
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回成功
+          schema:
+            $ref: '#/definitions/dto.SuccessResponseMeta'
+      summary: 模拟ElasticSearch查询数据接口未授权访问
+      tags:
+      - 模拟脆弱性相关的接口  
+  /_nodes:
+    get:
+      description: 模拟ElasticSearch节点目录未授权访问
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回成功
+          schema:
+            $ref: '#/definitions/dto.SuccessResponseMeta'
+      summary: 模拟ElasticSearch节点目录未授权访问
+      tags:
+      - 模拟脆弱性相关的接口
+  /actuator/info:
+    get:
+      description: 模拟SpringBoot部分常见路径未授权访问
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回成功
+          schema:
+            $ref: '#/definitions/dto.SuccessResponseMeta'
+      summary: 模拟SpringBoot部分常见路径未授权访问
+      tags:
+      - 模拟脆弱性相关的接口
+  /jolokia/list:
+    get:
+      description: 模拟Jolokia未授权访问
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回成功
+          schema:
+            $ref: '#/definitions/dto.SuccessResponseMeta'
+      summary: 模拟Jolokia未授权访问
+      tags:
+      - 模拟脆弱性相关的接口
+  /api/webservices/list:
+    get:
+      description: 模拟SonarQube未授权访问应用列表
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回成功
+          schema:
+            $ref: '#/definitions/dto.SuccessResponseMeta'
+      summary: 模拟SonarQube未授权访问应用列表
+      tags:
+      - 模拟脆弱性相关的接口
+  /v2/api-docs:
+    get:
+      description: 模拟Swagger未授权访问
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回成功
+          schema:
+            $ref: '#/definitions/dto.SuccessResponseMeta'
+      summary: 模拟Swagger未授权访问
+      tags:
+      - 模拟脆弱性相关的接口
+  /solr/admin/info/system:
+    get:
+      description: 模拟Solr未授权访问
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回成功
+          schema:
+            $ref: '#/definitions/dto.SuccessResponseMeta'
+      summary: 模拟Solr未授权访问
+      tags:
+      - 模拟脆弱性相关的接口
+  /GetDefualtOssInfo:
+    get:
+      description: 模拟云主机Accesskey或Secret key泄漏
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回成功
+          schema:
+            $ref: '#/definitions/dto.SuccessResponseMeta'
+      summary: 模拟云主机Accesskey或Secret key泄漏
+      tags:
+      - 模拟脆弱性相关的接口
+  /api/v1/namespaces/pods:
+    get:
+      description: 模拟Kubernetes API Server未授权访问
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回成功
+          schema:
+            $ref: '#/definitions/dto.SuccessResponseMeta'
+      summary: 模拟Kubernetes API Server未授权访问
+      tags:
+      - 模拟脆弱性相关的接口
+  /api/v1/settings/pinner:
+    get:
+      description: 模拟Kubernetes Dashboard面板未授权访问
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回成功
+          schema:
+            $ref: '#/definitions/dto.SuccessResponseMeta'
+      summary: 模拟Kubernetes Dashboard面板未授权访问
+      tags:
+      - 模拟脆弱性相关的接口
+  /graphql:
+    post:
+      description: 模拟GraphQL未授权访问
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回成功
+          schema:
+            $ref: '#/definitions/dto.SuccessResponseMeta'
+      summary: 模拟GraphQL未授权访问
+      tags:
+      - 模拟脆弱性相关的接口
+  /sendmessage:
+    post:
+      description: 模拟短信验证码出现在响应包中
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回成功
+          schema:
+            $ref: '#/definitions/dto.SuccessResponseMeta'
+      summary: 模拟短信验证码出现在响应包中
+      tags:
+      - 模拟脆弱性相关的接口
+  /ws_utc/resources/setting/keystore:
+    post:
+      description: 模拟Weblogic 未授权访问漏洞
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回成功
+          schema:
+            $ref: '#/definitions/dto.SuccessResponseMeta'
+      summary: 模拟Weblogic 未授权访问漏洞
+      tags:
+      - 模拟脆弱性相关的接口
+  /apisix/admin/migrate/export:
+    get:
+      description: 模拟Apache APISIX Dashboard 认证绕过（CVE-2021-45232）
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回成功
+          schema:
+            $ref: '#/definitions/dto.SuccessResponseMeta'
+      summary: 模拟Apache APISIX Dashboard 认证绕过（CVE-2021-45232）
+      tags:
+      - 模拟脆弱性相关的接口
+  /dashboardUser:
+    get:
+      description: 模拟Apache ShenYu Admin 身份验证绕过漏洞（CVE-2021-37580）
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回成功
+          schema:
+            $ref: '#/definitions/dto.SuccessResponseMeta'
+      summary: 模拟Apache ShenYu Admin 身份验证绕过漏洞（CVE-2021-37580）
+      tags:
+      - 模拟脆弱性相关的接口
+  /php/login.php:
+    get:
+      description: 模拟Cookie没有添加HttpOnly属性
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回成功
+          schema:
+            $ref: '#/definitions/dto.SuccessResponseMeta'
+      summary: 模拟Cookie没有添加HttpOnly属性
+      tags:
+      - 模拟脆弱性相关的接口
+  /api/islogin:
+    get:
+      description: 模拟JWT认证错误地使用了空加密算法
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回成功
+          schema:
+            $ref: '#/definitions/dto.SuccessResponseMeta'
+      summary: 模拟JWT认证错误地使用了空加密算法
+      tags:
+      - 模拟脆弱性相关的接口
+  /api/user:
+    delete:
+      description: 模拟危险方法未被禁用
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回成功
+          schema:
+            $ref: '#/definitions/dto.SuccessResponseMeta'
+      summary: 模拟危险方法未被禁用
+      tags:
+      - 模拟脆弱性相关的接口
+  /UniversalPassword:
+    delete:
+      description: 模拟万能密码注入
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回成功
+          schema:
+            $ref: '#/definitions/dto.SuccessResponseMeta'
+      summary: 模拟万能密码注入
+      tags:
+      - 模拟脆弱性相关的接口
+  /authenticationserverservlet:
+    get:
+      description: MessageSolution 企业邮件归档管理系统 EEA 存在信息泄露漏洞
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回成功
+          schema:
+            $ref: '#/definitions/dto.SuccessResponseMeta'
+      summary: 模拟MessageSolution 企业邮件归档管理系统 EEA 存在信息泄露漏洞
+      tags:
+      - 模拟脆弱性相关的接口
+  /WebReport/ReportServer:
+    get:
+      description: 模拟FineReport管理平台privilege.xml文件信息泄露
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回成功
+          schema:
+            $ref: '#/definitions/dto.SuccessResponseMeta'
+      summary: 模拟FineReport管理平台privilege.xml文件信息泄露
+      tags:
+      - 模拟脆弱性相关的接口
+  /a.php:
+    get:
+      description: 模拟Tomcat tomcat-users.xml, Apache Axis axis2.xml, Glassfish domain.xml, Jenkins config.xml, Zimbra conf/localconfig.xml信息泄露
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回成功
+          schema:
+            $ref: '#/definitions/dto.SuccessResponseMeta'
+      summary: 模拟Tomcat tomcat-users.xml, Apache Axis axis2.xml, Glassfish domain.xml, Jenkins config.xml, Zimbra conf/localconfig.xml信息泄露
+      tags:
+      - 模拟脆弱性相关的接口
+  /tmui/login.jsp/..;/tmui/locallb/workspace/a.php:
+    get:
+      description: 模拟F5 BIG-IP 认证绕过（CVE-2020-5902）
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回成功
+          schema:
+            $ref: '#/definitions/dto.SuccessResponseMeta'
+      summary: 模拟F5 BIG-IP 认证绕过（CVE-2020-5902）
+      tags:
+      - 模拟脆弱性相关的接口
+  /mgmt/tm/util/bash:
+    post:
+      description: 模拟F5 BIG-IP 认证绕过（CVE-2022-1388）,F5 BIG-IP命令注入漏洞（CVE-2021-22986）
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回成功
+          schema:
+            $ref: '#/definitions/dto.SuccessResponseMeta'
+      summary: 模拟F5 BIG-IP 认证绕过（CVE-2022-1388）, F5 BIG-IP命令注入漏洞（CVE-2021-22986）
+      tags:
+      - 模拟脆弱性相关的接口
+  /webapi/v1/system/accountmanage/account:
+    get:
+      description: 模拟绿盟UTS综合威胁探针信息泄露
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回成功
+          schema:
+            $ref: '#/definitions/dto.SuccessResponseMeta'
+      summary: 模拟绿盟UTS综合威胁探针信息泄露
+      tags:
+      - 模拟脆弱性相关的接口
+  /_users/org.couchdb.user:vulhub:
+    put:
+      description: 模拟Couchdb垂直权限绕过露
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: 返回成功
+          schema:
+            $ref: '#/definitions/dto.SuccessResponseMeta'
+      summary: 模拟Couchdb垂直权限绕过露
+      tags:
+      - 模拟脆弱性相关的接口
+  /run:
+    post:
+      description: 模拟XXL-Job远程命令执行漏洞
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回成功
+          schema:
+            $ref: '#/definitions/dto.SuccessResponseMeta'
+      summary: 模拟XXL-Job远程命令执行漏洞
+      tags:
+      - 模拟脆弱性相关的接口
+  /actuator/gateway/routes/hacktest:
+    post:
+      description: 模拟Spring Cloud Gateway代码注入漏洞（CVE-2022-22947）
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: 返回成功
+          schema:
+            $ref: '#/definitions/dto.SuccessResponseMeta'
+      summary: 模拟Spring Cloud Gateway代码注入漏洞（CVE-2022-22947）
+      tags:
+      - 模拟脆弱性相关的接口
+  /api/project/up:
+    get:
+      description: 模拟YApi未授权代码执行
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回成功
+          schema:
+            $ref: '#/definitions/dto.SuccessResponseMeta'
+      summary: 模拟YApi未授权代码执行
+      tags:
+      - 模拟脆弱性相关的接口
+  //mailsms/s:
+    get:
+      description: 模拟Coremail未授权访问（CNVD-2019-78549）
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回成功
+          schema:
+            $ref: '#/definitions/dto.SuccessResponseMeta'
+      summary: 模拟Coremail未授权访问（CNVD-2019-78549）
+      tags:
+      - 模拟脆弱性相关的接口
+  /druid/sql.json:
+    post:
+      description: 模拟Druid敏感信息泄露
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回成功
+          schema:
+            $ref: '#/definitions/dto.SuccessResponseMeta'
+      summary: 模拟Druid敏感信息泄露
+      tags:
+      - 模拟脆弱性相关的接口
+  /rest/api/latest/groupuserpicker:
+    get:
+      description: 模拟Atlassian jira信息泄露漏洞(CVE-2019-8449)
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回成功
+          schema:
+            $ref: '#/definitions/dto.SuccessResponseMeta'
+      summary: 模拟Atlassian jira信息泄露漏洞(CVE-2019-8449)
+      tags:
+      - 模拟脆弱性相关的接口
+  /v1/submissions/create:
+    post:
+      description: 模拟spark未授权命令执行漏洞
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回成功
+          schema:
+            $ref: '#/definitions/dto.SuccessResponseMeta'
+      summary: 模拟spark未授权命令执行漏洞
+      tags:
+      - 模拟脆弱性相关的接口
+  /customers/1:
+    patch:
+      description: 模拟spring data rest 远程命令执行（CVE-2017-8046）
+      produces:
+      - application/json
+      responses:
+        "400":
+          description: 返回失败
+          schema:
+            $ref: '#/definitions/dto.FailResponseMeta'
+      summary: 模拟spring data rest 远程命令执行（CVE-2017-8046）
+      tags:
+      - 模拟脆弱性相关的接口
+  /apisix/batch-requests:
+    post:
+      description: 模拟Apache APISIX 远程代码执行漏洞（CVE-2022-24112）
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回成功
+          schema:
+            $ref: '#/definitions/dto.FailResponseMeta'
+      summary: 模拟Apache APISIX 远程代码执行漏洞（CVE-2022-24112）
+      tags:
+      - 模拟脆弱性相关的接口
+  /kylin/api/admin/config:
+    post:
+      description: 模拟kylin远程命令执行漏洞（CVE-2020-1956）
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回成功
+          schema:
+            $ref: '#/definitions/dto.FailResponseMeta'
+      summary: 模拟kylin远程命令执行漏洞（CVE-2020-1956）
+      tags:
+      - 模拟脆弱性相关的接口
+  /api/v1/secret/kube-system/kubernetes-dashboard-certs:
+    get:
+      description: 模拟k8s Dashboard面板认证绕过漏洞（CVE-2018-18264）
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回成功
+          schema:
+            $ref: '#/definitions/dto.FailResponseMeta'
+      summary: 模拟k8s Dashboard面板认证绕过漏洞（CVE-2018-18264）
+      tags:
+      - 模拟脆弱性相关的接口
+  /DbAdminWSService/DbAdminWS:
+    post:
+      description: 模拟Cisco Data Center Network Manager 认证绕过漏洞（CVE-2019-15977）
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回成功
+          schema:
+            $ref: '#/definitions/dto.FailResponseMeta'
+      summary: 模拟Cisco Data Center Network Manager 认证绕过漏洞（CVE-2019-15977）
+      tags:
+      - 模拟脆弱性相关的接口
+  /service/soap:
+    post:
+      description: 模拟Zimbra 组件漏洞信息泄露
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回成功
+          schema:
+            $ref: '#/definitions/dto.FailResponseMeta'
+      summary: 模拟Zimbra 组件漏洞信息泄露
+      tags:
+      - 模拟脆弱性相关的接口
+  /openapi.json:
+    get:
+      description: 模拟API接口文档未授权访问
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回成功
+          schema:
+            $ref: '#/definitions/dto.FailResponseMeta'
+      summary: 模拟API接口文档未授权访问
+      tags:
+      - 模拟脆弱性相关的接口 
+  /user:
+    get:
+      description: 模拟HTTP Basic Authorization弱口令
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回成功
+          schema:
+            $ref: '#/definitions/dto.FailResponseMeta'
+      summary: 模拟HTTP Basic Authorization弱口令
+      tags:
+      - 模拟脆弱性相关的接口
+  /user/admin/infolog.log:
+    get:
+      description: 模拟重要接口未授权访问
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回成功
+          schema:
+            $ref: '#/definitions/dto.FailResponseMeta'
+      summary: 模拟重要接口未授权访问
+      tags:
+      - 模拟脆弱性相关的接口   
 swagger: "2.0"
